tests/snapshots/view_snapshots__bug_tab_click_after_visual_position.snap
---
source: tests/view_snapshots.rs
assertion_line: 2885
expression: after_click_output.clone()
---
Model: Unknown | Main Agent
┌Conversations─────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ Main Agent │ subagent_alpha │ subagent_beta │ subagent_gamma                                                         │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌Main Agent (2 entries)────────────────────────────────────────────────────────────────────────────────────────────────┐
││  1 Test                                                                                                             │
│                                                                                                                      │
││  2 Main agent response                                                                                              │
│── 5 in / 10 out / $0.00 | Context: 5 (0%) ──                                                                         │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
[LIVE] Wrap: On | q: Quit | ?: Help | /: Search | s: Stats | Tab: Cycle panes
