tests/snapshots/view_snapshots__bug_thinking_blocks_not_wrapped.snap
---
source: tests/view_snapshots.rs
expression: output
---
Model: Unknown | Main Agent
┌Conversations─────────────────────────────────────────────┐
│ Main Agent                                               │
└──────────────────────────────────────────────────────────┘
┌Main Agent (1 entries) ▶──────────────────────────────────┐
│   1│This is a short line.                                │
│   1│                                                     │
│   1│This is a very long line that should definitely wrap │
│   1│displayed in a narrow terminal window because it exce│
│   1│he typical width of most terminal displays.          │
│   1│                                                     │
│   1│Another short line.                                  │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
[LIVE] Wrap: On | q: Quit | ?: Help | /: Search
