tests/snapshots/view_snapshots__message_expanded_multiline.snap
---
source: tests/view_snapshots.rs
expression: output
---
┌Main Agent (1 entries)────────────────────────────────────┐
│   1│Line 1                                               │
│   1│Line 2                                               │
│   1│Line 3                                               │
│   1│Line 4                                               │
│   1│Line 5                                               │
│   1│Line 6                                               │
│   1│Line 7                                               │
│   1│Line 8                                               │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
