tests/snapshots/view_snapshots__message_with_thinking_block.snap
---
source: tests/view_snapshots.rs
expression: output
---
┌Main Agent (1 entries)────────────────────────────────────────────────────────┐
││   1 Let me analyze this problem step by step:                               │
││     1. First, I need to understand the requirements                         │
││     2. Then identify the key components                                     │
││     3. Finally, propose a solution                                          │
││     Based on my analysis, here's what I recommend...                        │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
